--- a/form.html
+++ b/form.html
@@ -16,7 +16,7 @@
   </div>
   <br>
   <div>
-    <label for="m">Mothers Name:</label>
+    <label for="m">Mothers Name:-</label>
     <input type="text" name="m" id="m">
   </div>
   <br>
