added another hiphen

--- a/form.html
+++ b/form.html
@@ -21,7 +21,7 @@
   </div>
   <br>
   <div>
-    <label for="f">Fathers Name:</label>
+    <label for="f">Fathers Name:-</label>
     <input type="text" name="f" id="f">
   </div>
   <br>
